# powerplant-coding-challenge

./: Dockerfile  README.md  pyproject.toml
src/powerplant_coding_challenge/: main.py
src/powerplant_coding_challenge/data_processing/: cost_computer.py
src/powerplant_coding_challenge/data_retrieving/: json_data_retriever.py
src/powerplant_coding_challenge/utils/: dataclasses.py
